plugins {
    id 'java'
}

group 'io.github.yfblock'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

//dependencies {
//    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
//    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
//}


// 设置多版本兼容
sourceSets {
    java11 {
        java {
            srcDirs = ['src/main/java11']
        }
    }
}

dependencies {
    implementation 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'

    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'

    java11Implementation files(sourceSets.main.output.classesDirs) { builtBy compileJava }
}

// 默认编译
compileJava {
    sourceCompatibility '1.8'
    targetCompatibility '1.8'
}

// 多版本之一11编译
compileJava11Java {
    options.compilerArgs << '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED' <<
            '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED' <<
            '--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED' <<
            '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'

    sourceCompatibility '11'
    targetCompatibility '11'
}

// 设置打包为Jar包
jar {
    into('META-INF/versions/11') {
        from sourceSets.java11.output
    }

    manifest {
        attributes(
                "Manifest-Version": "1.0",
                "Multi-Release": true
        )
    }
}


test {
    useJUnitPlatform()
}